<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stack Chat</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open_description">Open Drawer</string>
    <string name="navigation_drawer_close_description">Close Drawer</string>

    <!-- Login Fragment -->
    <string name="login_fragment_header_text">Log In to StackExchange</string>
    <string name="login_fragment_user_email_hint">Email</string>
    <string name="login_fragment_user_password_hint">Password</string>
    <string name="login_fragment_save_credentials_text">Save Credentials</string>
    <string name="login_fragment_save_credentials_warning">Information will be encrypted, however there is still a security risk</string>
    <string name="login_fragment_login_button_text">Login</string>

    <!-- Stack Network Select Fragment -->
    <string name="stack_network_fragment_helper_text">Select a Stack Network to view chatrooms for</string>

</resources>
