<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<!--
    <ImageView
        android:id="@+id/seLogo"
        android:layout_width="@dimen/login_fragment_se_logo_size"
        android:layout_height="@dimen/login_fragment_se_logo_size"
        android:background="@drawable/se_icon"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/userEmail"
        android:layout_marginBottom="@dimen/login_fragment_se_logo_margin_bottom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/seLogo"
        android:layout_marginTop="@dimen/login_fragment_header_text_margin_top"
        android:text="@string/login_fragment_header_text" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_fragment_username_field_margin_bottom"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/login_fragment_user_email_hint"/>

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/login_fragment_password_field_margin_bottom"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/login_fragment_user_password_hint"/>

    <CheckBox
        android:id="@+id/saveUserCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/userPassword"
        android:layout_alignLeft="@+id/userPassword"
        android:layout_marginTop="@dimen/login_fragment_save_credentials_margin_top"
        android:text="Save credentials" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/saveUserCredentials"
        android:layout_alignLeft="@+id/saveUserCredentials"
        android:layout_marginTop="@dimen/login_fragment_save_credentials_warning_margin_top"
        android:text="@string/login_fragment_save_credentials_warning"
        android:textColor="@color/primary"/>
-->

    <!-- Image Header -->
    <ImageView
        android:id="@+id/login_fragment_se_logo"
        android:layout_width="@dimen/login_fragment_se_logo_size"
        android:layout_height="@dimen/login_fragment_se_logo_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/se_icon"/>

    <TextView
        android:id="@+id/login_fragment_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_fragment_se_logo"
        android:textSize="@dimen/login_fragment_header_text_size"
        android:textStyle="bold"
        android:text="@string/login_fragment_header_text" />

    <!-- Login Fields -->
    <EditText
        android:id="@+id/login_fragment_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_fragment_user_password"
        android:ems="@integer/login_fragment_login_fields_ems"
        android:inputType="textEmailAddress"
        android:hint="@string/login_fragment_user_email_hint"/>

    <EditText
        android:id="@+id/login_fragment_user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_fragment_save_credentials"
        android:ems="@integer/login_fragment_login_fields_ems"
        android:inputType="textPassword"
        android:hint="@string/login_fragment_user_password_hint"/>

    <CheckBox
        android:id="@+id/login_fragment_save_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_fragment_save_credentials_warning"
        android:layout_alignLeft="@+id/login_fragment_user_password"
        android:text="@string/login_fragment_save_credentials_text"/>

    <TextView
        android:id="@+id/login_fragment_save_credentials_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_fragment_login_button"
        android:visibility="invisible"
        android:textColor="@color/primary"
        android:text="@string/login_fragment_save_credentials_warning"/>

    <Button
        android:id="@+id/login_fragment_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login_fragment_login_button_text"/>

</RelativeLayout>